Header fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,10 @@
 @media (max-width: 740px) {
 
     .fig_content img{
-        width: auto;
+        width: 100%;
+        height: 480px;
+        object-fit: cover;
+        object-position: right;
     }
 
     .fig_content figcaption {
